--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Client side of the bflix API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
