--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "Client side of the bflix API",
+  "main": "index.js",
   "scripts": {
+    "start": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,9 +18,13 @@
   },
   "homepage": "https://github.com/patriciamcphee/bflix-client#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.3",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
