--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "homepage": "https://github.com/patriciamcphee/bflix-client#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
